@@ -1,5 +1,11 @@
 2021-01-08  Timm Bäder  <tbaeder@redhat.com>
 
+	* readelf.c (print_attributes): Lift left function to...
+	(left): ...here. New file scope function taking Elf_Data and char
+	pointers.
+
+2021-01-08  Timm Bäder  <tbaeder@redhat.com>
+
 	* readelf.c (handle_core_registers): Lift same_set function to...
 	(same_set): ...here. New file scope function adding regs and
 	maxnreg arguments.
